# koronaslovakia

./: .gitignore  LICENSE  README.md
backend/: .flaskenv  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  tasks.py
backend/coronastats/: __init__.py  cache.py  commands.py  config.py  db.py  manage.py  migrations.py  routes.py  scrapper.py  server.py  wsgi.py
backend/poolstats/: db.py  manage.py  scrapper.py  server.py  wsgi.py
backend/serverconfig/: nginx.conf  supervisor.conf
backend/tests/: conftest.py  test_db.py
frontend/: .env  .env.production  .eslintrc.js  .prettier.config.js  README.md  package.json  rollup.config.js  tsconfig.json
frontend/public/: humans.txt  index.html  site.webmanifest
frontend/src/: App.svelte  App.vue  api.ts  axios.ts  main.ts  shims-cachios.d.ts  store.ts  types.ts  utils.ts
frontend/src/components/: BasicLineChart.svelte  ChartLayout.svelte  ChartLayout.vue  ChartList.svelte  ChartList.vue  DayGraph.vue  DaySelect.vue  InfectedByLocationTable.svelte  InfectedByLocationTable.vue  InfectedLogChart.vue  LineChart.svelte  OutcomeChart.vue  Pagination.svelte  Stats.vue  SubValueCard.svelte  Summary.svelte  Summary.vue  TestedChart.vue  TestedPerDayChart.svelte  TestedPerDayPositivePercentLineChart.svelte  TestedPercentageChart.svelte  TestsPerDayChart.vue
frontend/src/styles/: global.scss  layout.scss  variables.scss  vendor.scss
