[tool.poetry]
name = "coronastats"
version = "0.1.0"
description = ""
authors = ["Boris Zalman  <boris.zalman33@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
schedule = "^0.6.0"
requests = "^2.23.0"
flask_cors = "^3.0.8"
python-dateutil = "^2.8.1"
pytz = "^2019.3"
peewee = "^3.13.1"
gunicorn = "^20.0.4"
Flask-Caching = "^1.8.0"
pylibmc = { version = "^1.6.1", optional = true }

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
patchwork = "^1.0.1"
fabric = "^2.5.0"
ipdb = "^0.13.2"
python-dotenv = "^0.12.0"
pytest = "^5.4.1"
flask-pytest = "^0.0.5"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
